--- a/page_1.html
+++ b/page_1.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<a href="/page_2.html">link to page 2</a>
+	<a href="./page_2.html">link to page 2</a>
 
 </body>
 </html>
