--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
+<head> 
+	<title>A Poem</title>
 </head>
 <body>
 
-	<a href="./page_1.html">link to page 1</a>
+<h1>Rain</h1>
+
+<h4>Rain is the Paine were unable to feel</h4>
+
+	<a href="./page_1.html"><img src="1.jpg"></a>
 
 </body>
 </html>
