--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h4>Rain is the Paine were unable to feel</h4>
 
-	<a href="./page_1.html"><img src="1.jpg"></a>
+	<a href="./page_1.html"><img src="first.jpg"></a>
 
 </body>
 </html>
