--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h4>Rain is the Paine were unable to feel</h4>
 
-	<a href="./page_1.html"><img src="first.jpg" width="400px" alt="This is a photo of my shadow"> </a>
+	<a href="./page_1.html"><img src="first.jpg" width="400px" alt="This is a photo of Rain"> </a>
 
 </body>
 </html>
