--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <h4>Rain is the Paine were unable to feel</h4>
 
-	<a href="./page_1.html"><img src="first.jpg" width="400px" alt="This is a photo of Rain"> </a>
+	<a href="./page_1.html">
+		<img src="first.jpeg" width="400px" alt="This is a photo of Rain"> 
+	</a>
 
 </body>
 </html>
