--- a/page_1.html
+++ b/page_1.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
-	<a href="./page_2.html">link to page 2</a>
+
+	<h4>The tears of the slain that the weather unviels</h4>
+
+	<a href="./page_2.html"> 
+		<img src="second.jpeg" width="400px" alt="This is a photo of Rain"> 
+	</a>
 
 </body>
 </html>
