--- a/page_2.html
+++ b/page_2.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
-	<a href="./page_3.html">link to page 3</a>
+
+	<h4>The trace of the stain humanity reels</h4>
+
+	<a href="./page_3.html">
+		<img src="third.jpeg"> width="400px" alt="This is a photo of Rain">  
+	</a>
 
 </body>
 </html>
