--- a/page_3.html
+++ b/page_3.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
-	<a href="./page_3.html">link to page 3</a>
+
+	<h4>The sound of our brains unable to heal</h4>
+
+	<a href="./page_3.html">
+		<img src="fourth.jpeg"> width="400px" alt="This is a photo of Rain"> 
+	</a>
 
 </body>
 </html>
