--- a/page_4.html
+++ b/page_4.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
-	<a href="./page_4.html">link to page 4</a>
+
+	<h4>The infinite cry of slumbering squeels</h4>
+
+	<a href="./page_4.html">
+		<img src="fifth.jpeg"> width="400px" alt="This is a photo of Rain"> 
+	</a>
 
 </body>
 </html>
