--- a/page_5.html
+++ b/page_5.html
@@ -4,7 +4,12 @@
 	<title></title>
 </head>
 <body>
-	<a href="./page_5.html">link to page 5</a>
+
+	<h4>THe knife on our skin that cuts us like steel</h4>
+
+	<a href="./page_1.html">
+		<img src="sixth.jpeg"> width="400px" alt="This is a photo of Rain"> 
+	</a>
 
 </body>
 </html>
