--- a/page_1.html
+++ b/page_1.html
@@ -5,11 +5,12 @@
 </head>
 <body>
 
-	<h4>The tears of the slain that the weather unviels</h4>
+	<h4>The tears of the slain that the weather
+		<p><a href="./page_2.html">unveils</a></p> 
+    </h4>
 
-	<a href="./page_2.html"> 
-		<img src="second.jpeg" width="400px" alt="This is a photo of Rain"> 
-	</a>
+	
+<img src="second.jpeg" width="400px" alt="This is a photo of Rain">
 
 </body>
 </html>
