--- a/page_1.html
+++ b/page_1.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-	<h4>The tears of the slain that the weather
-		<p><a href="./page_2.html">unveils</a></p> 
+	<h4>The tears of the slain that the weather<p><a href="./page_2.html">unveils</a></p> 
     </h4>
 
 	
