--- a/page_3.html
+++ b/page_3.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-	<h4>The sound of our brains unable to heal</h4>
+	<h4>The sound of our brains unable to<p><a href="./page_3.html">heal</a></p></h4>
 
-	<a href="./page_3.html">
-		<img src="fourth.jpeg"> width="400px" alt="This is a photo of Rain"> 
-	</a>
+
+	<img src="fourth.jpeg" width="400px" alt="This is a photo of Rain">
 
 </body>
 </html>
