--- a/page_5.html
+++ b/page_5.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-	<h4>THe knife on our skin that cuts us like steel</h4>
+	<h4>THe knife on our skin that cuts us like<p><a href="./page_1.html">steel</a></p></h4>
 
-	<a href="./page_1.html">
-		<img src="sixth.jpeg"> width="400px" alt="This is a photo of Rain"> 
-	</a>
+	
+	<img src="sixth.jpeg" width="400px" alt="This is a photo of Rain"> 
 
 </body>
 </html>
