--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2>A poem by Rebecca Silverman</h2> 
 
 
-<h4>Rain is the Paine were unable to feel</h4>
+<h4>Rain is the Pain we're unable to feel</h4>
 
 	<a href="./page_1.html">
 		<img src="first.jpeg" width="400px" alt="This is a photo of Rain"> 
