--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h4>Rain is the Pain we're unable to feel</h4>
 
 	<a href="./page_1.html">
-		<img src="first.jpeg" width="400px" alt="This is a photo of Rain"> 
+		<img src="images/first.jpeg" width="400px" alt="This is a photo of Rain"> 
 	</a>
 
 </body>
