--- a/page_1.html
+++ b/page_1.html
@@ -8,7 +8,7 @@
 	<h4>The tears of the slain that the weather<p><a href="./page_2.html">unveils</a></p></h4>
 
 	
-<img src="second.jpeg" width="400px" alt="This is a photo of Rain">
+<img src="images/second.jpeg" width="400px" alt="This is a photo of Rain">
 
 </body>
 </html>
