--- a/page_2.html
+++ b/page_2.html
@@ -8,7 +8,7 @@
 	<h4>The trace of the stain humanity reels</h4>
 
 	<a href="./page_3.html">
-		<img src="third.jpeg" width="400px" alt="This is a photo of Rain">  
+		<img src="images/third.jpeg" width="400px" alt="This is a photo of Rain">  
 	</a>
 
 </body>
