--- a/page_3.html
+++ b/page_3.html
@@ -8,7 +8,7 @@
 	<h4>The sound of our brains unable to<p><a href="./page_4.html">heal</a></p></h4> 
 
 
-	<img src="fourth.jpeg" width="400px" alt="This is a photo of Rain">
+	<img src="images/fourth.jpeg" width="400px" alt="This is a photo of Rain">
 
 </body>
 </html>
