--- a/page_4.html
+++ b/page_4.html
@@ -8,7 +8,7 @@
 	<h4>The infinite cry of slumbering squeels</h4>
 
 	<a href="./page_5.html"> 
-		<img src="fifth.jpeg" width="400px" alt="This is a photo of Rain"> 
+		<img src="images/fifth.jpeg" width="400px" alt="This is a photo of Rain"> 
 	</a>
 
 </body>
