--- a/page_5.html
+++ b/page_5.html
@@ -8,7 +8,7 @@
 	<h4>The knife on our skin that cuts us like<p><a href="./index.html">steel</a></p></h4>
 
 	
-	<img src="sixth.jpeg" width="400px" alt="This is a photo of Rain"> 
+	<img src="images/sixth.jpeg" width="400px" alt="This is a photo of Rain"> 
 
 </body>
 </html>
