--- a/page_1.html
+++ b/page_1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h4>The tears of the slain that the weather<p><a href="./page_2.html">unveils</a></p></h4>
+	<h4>The tears of the slain that the weather<a href="./page_2.html"> unveils</a></h4>
 
 	
 <img src="images/second.jpeg" width="400px" alt="This is a photo of Rain">
