--- a/page_3.html
+++ b/page_3.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h4>The sound of our brains unable to<p><a href="./page_4.html">heal</a></p></h4> 
+	<h4>The sound of our brains unable to<a href="./page_4.html"> heal</a></h4> 
 
 
 	<img src="images/fourth.jpeg" width="400px" alt="This is a photo of Rain">
