--- a/page_5.html
+++ b/page_5.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h4>The knife on our skin that cuts us like<p><a href="./index.html">steel</a></p></h4>
+	<h4>The knife on our skin that cuts us like<a href="./index.html"> steel</a></h4>
 
 	
 	<img src="images/sixth.jpeg" width="400px" alt="This is a photo of Rain"> 
